added most of the application

--- a/src/App.css
+++ b/src/App.css
@@ -118,8 +118,8 @@ body {
 .note-card-title {
   width: 200px;
   height: 40px;
-  color: white;
-  color: #C5A623;
+  color: black;
+  color: black;
   font-weight: bold;
   position: absolute;
   top: 0;
